# jupyter-templates

./: .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml
binder/: requirements.txt
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  pnpm-lock.yaml
js/src/: index.js
js/src/notebook/: jupyter_templates.yaml  main.js
js/style/: index.css
js/tests/: activate.test.js  assetsTransformer.js  export.test.js  fileMock.js  setup.js  styleMock.js
jupyter_templates/: __init__.py  extension.py
jupyter_templates/extension/: install.json  jupyter_templates.json
jupyter_templates/nbextension/: __init__.py
jupyter_templates/tests/: __init__.py  test_all.py  test_extension.py  test_init.py
