[build-system]
requires = [
    "hatchling>=1.22.4,<1.23",
    "pkginfo>=1.10,<1.11",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "jupyter_templates"
description = "notebook templates for jupyter and jupyterlab"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "the jupyter_templates authors" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab Extension",
    "Templates",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "jupyterlab>=4,<5",
]

[project.optional-dependencies]
develop = [
    "check-manifest",
    "ruff>=0.3,<0.5",
    "pytest",
    "pytest-cov",
    "twine>=5,<5.2"
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/timkpaine/jupyter_templates"
Homepage = "https://github.com/timkpaine/jupyter_templates"

[tool.check-manifest]
ignore = [
	"jupyter_templates/labextension/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "jupyter_templates/labextension"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_templates/labextension" = "share/jupyter/labextensions/jupyter_templates"
"jupyter_templates/nbextension/static" = "share/jupyter/nbextensions/jupyter_templates"
"jupyter_templates/extension/install.json" = "share/jupyter/labextensions/jupyter_templates/install.json"
"jupyter_templates/extension/jupyter_templates.json" = "etc/jupyter/jupyter_server_config.d/jupyter_templates.json"
"jupyter_templates/extension/notebook_templates" = "share/jupyter/notebook"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "binder",
    "docs",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_templates/nbextension/static/main.js",
    "jupyter_templates/labextension/package.json",
]
skip-if-exists = [
    "jupyter_templates/nbextension/static/main.js",
    "jupyter_templates/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = "yarn"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
