[build-system]
requires = [
    "hatchling",
    "hatch-jupyter-builder",
    "jupyterlab>=4,<5",
]
build-backend="hatchling.build"

[project]
name = "jupyter-templates"
authors = [{name = "the jupyter-templates authors", email = "t.paine154@gmail.com"}]
description = "Support for notebook templates in jupyter and jupyterlab"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.1"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatch-jupyter-builder",
    "hatchling",
    "jupyterlab>=4,<5",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/timkpaine/jupyter-templates"
Homepage = "https://github.com/timkpaine/jupyter-templates"

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "jupyter_templates/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "binder/requirements.txt"
search = "jupyter-templates=={current_version}"
replace = "jupyter-templates=={new_version}"

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "js/pnpm-lock.yaml",
    "Makefile",
    ".vscode/**",
    "binder/**",
    "jupyter_templates/extension/**",
    "jupyter_templates/labextension/**",
    "jupyter_templates/nbextension/**",
    "docs/**/*",
    "js/dist/**/*",
    "js/lib/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "jupyter_templates/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "jupyter_templates/nbextension",
    "jupyter_templates/labextension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["jupyter_templates", "js"]
exclude = [
    "/.github",
    "/.vscode",
    "/binder",
    "/docs",
    "/js/dist",
    "/js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["jupyter_templates"]
exclude = [
    "/.github",
    "/.vscode",
    "/binder",
    "/docs",
    "/js",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_templates/labextension" = "share/jupyter/labextensions/jupyter_templates"
"jupyter_templates/nbextension/static" = "share/jupyter/nbextensions/jupyter_templates"
"jupyter_templates/extension/install.json" = "share/jupyter/labextensions/jupyter_templates/install.json"
"jupyter_templates/extension/jupyter_templates.json" = "etc/jupyter/jupyter_server_config.d/jupyter_templates.json"
"jupyter_templates/extension/notebook_templates" = "share/jupyter/notebook"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_templates/nbextension/static/main.js",
    "jupyter_templates/labextension/package.json",
]
skip-if-exists = [
    "jupyter_templates/nbextension/static/main.js",
    "jupyter_templates/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = "pnpm"

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "jupyter_templates/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyter_templates"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
